Base/bin-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bingo
  labels:
    app: bingo
    component: service
spec:
  type: NodePort
  selector:
    app: bingo
    component: deployment
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
