Base/bin-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bingo
  # annotations:
    # kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: bingo.local.gd
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bingo
            port:
              number: 80
